[project]
name = "langgraph-mcp"
version = "0.0.1"
description = "LangGraph solution template for MCP"
authors = [
    { name = "Pranav Dhoolia", email = "pranav@dhoolia.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.2.11",
    "langchain-anthropic>=0.1.23",
    "langchain-core>=0.3.21",
    "langchain>=0.2.17",
    "python-dotenv>=1.0.1",
    "langchain-milvus>=0.1.7"
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "debugpy"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["retrieval_graph"]
[tool.setuptools.package-dir]
"retrieval_graph" = "src/retrieval_graph"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
